+updated whois component

--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -80,7 +80,7 @@
       <sub-domains></sub-domains>
     </tab>
     <tab>
-      <template tabHeading>{{'domain.whois' | translate}}</template>
+      <template tabHeading>{{'domain.whois.title' | translate}}</template>
       <whois></whois>
     </tab>
     <tab>
