+added certificate component

--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -84,8 +84,8 @@
       <whois></whois>
     </tab>
     <tab>
-      <template tabHeading>{{'domain.certificate' | translate}}</template>
-      Certificate
+      <template tabHeading>{{'domain.cert.title' | translate}}</template>
+      <cert></cert>
     </tab>
     <tab>
       <template tabHeading>{{'domain.visualization' | translate}}</template>
