--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -94,6 +94,9 @@
         }
       }
     }
+    .panel-body:nth-of-type(odd) {
+      background-color: $table-bg-accent;
+    }
   }
   .span-list.panel {
     .row span {
