+add visual component

--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -89,7 +89,7 @@
     </tab>
     <tab>
       <template tabHeading>{{'domain.visualization' | translate}}</template>
-      Visualization
+      <visual></visual>
     </tab>
     <tab>
       <template tabHeading>{{'domain.community' | translate}}</template>
