--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -113,5 +113,11 @@
     </tab>
   </tabset>
 </div>
+<div *ngIf="!entity && !notFound" class="container main-body">
+  <div class="ui loader">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
 
 <footer [class]="'footer'"></footer>
