+added example data

--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -24,7 +24,7 @@
           <table class="table table-condensed table-borderless">
             <tbody>
               <tr>
-                <th>{{'domain.DNS' | translate}}</th>
+                <th style="width: 100px;">{{'domain.DNS' | translate}}</th>
                 <td>{{entity.registrar}}</td>
               </tr>
               <tr>
