--- a/src/app/domain/ip.component.html
+++ b/src/app/domain/ip.component.html
@@ -55,7 +55,7 @@
   <div class="panel-body">
     <div class="row">
       <div *ngFor="let item of entity.reverseIps" class="col-md-6">
-        <span>{{item.domain}}</span>
+        <span><a href="javascript:;">{{item.domain}}</a></span>
       </div>
     </div>
   </div>
