--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import 'font-awesome-extend';
 
 @import '../assets/css/melon-ui';
+@import '../assets/css/nv-d3';
 
 .navbar-brand {
   color: $brand-info;
